Improve classpath builder to add required dependencies and support studio projects, minimizing required setup from users